# P2T

./: BuildDoseMatrix_PairProd.m  ComputeContrast.m  ComputeContrast_Original.m  ComputeFluence.m  CreatePhantom.m  CreatePhantom_PartialViewPhantom.m  CreatePhantom_Square.m  CreatePhantom_iodinecalcium.m  CreatePhantom_nanoparticles_LimitedFOV.m  DensityList.m  Evaluate_PPintensity.m  Fig1_timeresolvehist_revision.m  FluenceCorrection.m  GetACfactor_list.m  GetACfactor_sino.m  IdentifyLOR.m  IdentifyLOR_511.m  IterRecon_PairProd_TV_FISTA.m  LICENSE  Main_PairProd_planningimage_GBMHY_100m.m  MergeSimulations_GBM.m  MergeSimulations_phantomnanoparticles_CTsim.m  MergeSimulations_phantoms.m  PSFreader.m  Plot_6FFFvs6X.m  PreProcess_CTsim_phantom.m  PreProcess_PairProd.m  PreProcess_PairProd_GBM_multipleruns.m  PreProcess_TERMA.m  Preprocess_computestats.m  README.md  Readmcgeo.m  Recon_GBMHY_100m_thinkstation.m  Recon_GBMHY_FullSimulation_thinkstation.m  Recon_phantom_LimitedROI_thinkstation.m  Recon_phantom_thinkstation.m  Recon_phantom_thinkstation_TV.m  ResultsAnalysis_CTphantom.m  ResultsAnalysis_CTphantom_limitedROI.m  ResultsAnalysis_DECTphantom.m  (+29 more)
MC simulation/dosecalc/montecarlo/: CMakeLists.txt  README.md  docker-exec.sh  main.cc
MC simulation/dosecalc/montecarlo/docker-build/: .gitignore  build-binaries.sh  build-image.sh  buildapp.sh  entry-point.sh
MC simulation/dosecalc/montecarlo/include/: AllActionInitialization.hh  DetectorConstruction.hh  NestedParam.hh  PositronAnnihilation.hh  PositronAnnihilation3D.hh  Run.hh  RunAction.hh  SqDoseDeposit.hh  SqDoseDeposit3D.hh  SteppingAction.hh  detection.protobuf.pb.h  os_utils.hh
MC simulation/dosecalc/montecarlo/protobufs/: detection.protobuf
MC simulation/dosecalc/montecarlo/run000/: read_sparse_data.ipynb
MC simulation/dosecalc/montecarlo/src/: DetectorConstruction.cc  DetectorMessenger.cc  NestedParam.cc  PhysicsList.cc  PositronAnnihilation.cc  PositronAnnihilation3D.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SqDoseDeposit.cc  os_utils.cc  (+3 more)
(+359 files in other folders)
